--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <h1>Hey Paige!</h1>
     <button id="askButton">Click Me!</button>
-    <h2 id="promQuestion">Do You Want to Come to Loyola's Prom With Me?</h2>
+    <h2 id="promQuestion">Prom?</h2>
   </div>
   <script src="script.js"></script>
 </body>
